--- a/summary.tex
+++ b/summary.tex
@@ -679,6 +679,9 @@ multi-armed bandits & online & static\\
 \citeA{salcedo-sanz_evolutionary-based_2014} & games & past performance &
 combination of low-level heuristics & genetic algorithm & offline & static\\
 
+\citeA{sagarna_assisting_2014} & software testing & instance features &
+algorithm & Bayesian network & offline & static\\
+
 % 2015
 
 \citeA{tierney_algorithm_2015} & container premarshalling & instance features,
@@ -884,6 +887,29 @@ clustering & offline & static\\
 
 \citeA{wang_wombit_2018} & CSP & instance features & algorithm & decision tree &
 offline & static\\
+
+\citeA{tripoul_there_2018} & pattern matching & simulation & constraint & hand-crafted model &
+online & static\\
+
+\citeA{pavelski_meta-learning_2018,pavelski_recommending_2018} & flowshop &
+instance features & algorithm & decision trees, gradient boosting & offline & static\\
+
+\citeA{alcobaca_dimensionality_2018} & machine learning & instance features &
+algorithm & classification & offline & static\\
+
+\citeA{kerschke_leveraging_2018} & TSP & instance features & algorithm &
+classification, regression & offline & static\\
+
+% 2019
+
+\citeA{loera_data-driven_2019} & optimization & instance & algorithm &
+neural networks & offline & static\\
+
+\citeA{mantovani_meta-learning_2019} & machine learning & instance features &
+algorithm & classification & offline & static\\
+
+\citeA{abdulrahman_simplifying_2019} & machine learning & instance features &
+algorithm & ranking & offline & static\\
 
 \end{longtable}
 \end{landscape}
