--- a/survey.bib
+++ b/survey.bib
@@ -3236,3 +3236,83 @@
 	month = nov,
 	year = {2018}
 }
+
+@inproceedings{tripoul_there_2018,
+	title = {There are {Trillions} of {Little} {Forks} in the {Road}. {Choose} {Wisely}! - {Estimating} the {Cost} and {Likelihood} of {Success} of {Constrained} {Walks} to {Optimize} a {Graph} {Pruning} {Pipeline}},
+	booktitle = {{IEEE}/{ACM} 8th {Workshop} on {Irregular} {Applications}: {Architectures} and {Algorithms} ({IA}3)},
+	author = {Tripoul, Nicolas and Halawa, Hassan and Reza, Tahsin and Sanders, Geoffrey and Pearce, Roger and Ripeanu, Matei},
+	month = nov,
+	year = {2018},
+	pages = {20--27}
+}
+
+@inproceedings{pavelski_recommending_2018,
+	title = {Recommending {Meta}-{Heuristics} and {Configurations} for the {Flowshop} {Problem} via {Meta}-{Learning}: {Analysis} and {Design}},
+	booktitle = {7th {Brazilian} {Conference} on {Intelligent} {Systems} ({BRACIS})},
+	author = {Pavelski, Lucas M. and Kessaci, Marie-Éléonore and Delgado, Myriam R.},
+	month = oct,
+	year = {2018},
+	pages = {163--168}
+}
+
+@inproceedings{pavelski_meta-learning_2018,
+	title = {Meta-{Learning} for {Optimization}: {A} {Case} {Study} on the {Flowshop} {Problem} {Using} {Decision} {Trees}},
+	booktitle = {{IEEE} {Congress} on {Evolutionary} {Computation} ({CEC})},
+	author = {Pavelski, Lucas M. and Delgado, Myriam R. and Kessaci, Marie-Éléonore},
+	month = jul,
+	year = {2018},
+	pages = {1--8}
+}
+
+@inproceedings{alcobaca_dimensionality_2018,
+	title = {Dimensionality {Reduction} for the {Algorithm} {Recommendation} {Problem}},
+	booktitle = {7th {Brazilian} {Conference} on {Intelligent} {Systems} ({BRACIS})},
+	author = {Alcobaça, Edesio and Mantovani, Rafael G. and Rossi, André L. D. and Carvalho, André C. P. L. F. de},
+	month = oct,
+	year = {2018},
+	pages = {318--323}
+}
+
+@article{sagarna_assisting_2014,
+	title = {Assisting in search heuristics selection through multidimensional supervised classification: {A} case study on software testing},
+	volume = {258},
+	journal = {Information Sciences},
+	author = {Sagarna, Ramón and Mendiburu, Alexander and Inza, Iñaki and Lozano, Jose A.},
+	year = {2014},
+	pages = {122--139}
+}
+
+@inproceedings{loera_data-driven_2019,
+	title = {Data-driven {Algorithm} {Selection} and {Parameter} {Tuning}: {Two} {Case} studies in {Optimization} and {Signal} {Processing}},
+	booktitle = {Data {Science} {Meets} {Optimisation} {Workshop} at {IJCAI} 2019},
+	author = {Loera, Jesús A. De and Haddock, Jamie and Ma, Anna and Needell, Deanna},
+	month = aug,
+	year = {2019}
+}
+
+@article{mantovani_meta-learning_2019,
+	title = {A meta-learning recommender system for hyperparameter tuning: {Predicting} when tuning improves {SVM} classifiers},
+	volume = {501},
+	journal = {Information Sciences},
+	author = {Mantovani, Rafael G. and Rossi, André L. D. and Alcobaça, Edesio and Vanschoren, Joaquin and Carvalho, André C. P. L. F. de},
+	year = {2019},
+	pages = {193--221}
+}
+
+@article{kerschke_leveraging_2018,
+	title = {Leveraging {TSP} {Solver} {Complementarity} through {Machine} {Learning}},
+	volume = {26},
+	number = {4},
+	journal = {Evolutionary Computation},
+	author = {Kerschke, Pascal and Kotthoff, Lars and Bossek, Jakob and Hoos, Holger H. and Trautmann, Heike},
+	year = {2018},
+	pages = {597--620}
+}
+
+@inproceedings{abdulrahman_simplifying_2019,
+	title = {Simplifying the {Algorithm} {Selection} {Using} {Reduction} of {Rankings} of {Classification} {Algorithms}},
+	booktitle = {8th {International} {Conference} on {Software} and {Computer} {Applications}},
+	author = {Abdulrahman, Salisu M. and Brazdil, Pavel and Zainon, Wan M. N. W. and Adamu, Alhassan},
+	year = {2019},
+	pages = {140--148}
+}
