update web and character encoding headaches

--- a/survey.bib
+++ b/survey.bib
@@ -3249,7 +3249,7 @@
 @inproceedings{pavelski_recommending_2018,
 	title = {Recommending {Meta}-{Heuristics} and {Configurations} for the {Flowshop} {Problem} via {Meta}-{Learning}: {Analysis} and {Design}},
 	booktitle = {7th {Brazilian} {Conference} on {Intelligent} {Systems} ({BRACIS})},
-	author = {Pavelski, Lucas M. and Kessaci, Marie-Éléonore and Delgado, Myriam R.},
+	author = {Pavelski, Lucas M. and Kessaci, Marie-\'Eléonore and Delgado, Myriam R.},
 	month = oct,
 	year = {2018},
 	pages = {163--168}
@@ -3258,7 +3258,7 @@
 @inproceedings{pavelski_meta-learning_2018,
 	title = {Meta-{Learning} for {Optimization}: {A} {Case} {Study} on the {Flowshop} {Problem} {Using} {Decision} {Trees}},
 	booktitle = {{IEEE} {Congress} on {Evolutionary} {Computation} ({CEC})},
-	author = {Pavelski, Lucas M. and Delgado, Myriam R. and Kessaci, Marie-Éléonore},
+	author = {Pavelski, Lucas M. and Delgado, Myriam R. and Kessaci, Marie-\'Eléonore},
 	month = jul,
 	year = {2018},
 	pages = {1--8}
@@ -3267,7 +3267,7 @@
 @inproceedings{alcobaca_dimensionality_2018,
 	title = {Dimensionality {Reduction} for the {Algorithm} {Recommendation} {Problem}},
 	booktitle = {7th {Brazilian} {Conference} on {Intelligent} {Systems} ({BRACIS})},
-	author = {Alcobaça, Edesio and Mantovani, Rafael G. and Rossi, André L. D. and Carvalho, André C. P. L. F. de},
+	author = {Alcoba\c{c}a, Edesio and Mantovani, Rafael G. and Rossi, André L. D. and Carvalho, André C. P. L. F. de},
 	month = oct,
 	year = {2018},
 	pages = {318--323}
@@ -3294,7 +3294,7 @@
 	title = {A meta-learning recommender system for hyperparameter tuning: {Predicting} when tuning improves {SVM} classifiers},
 	volume = {501},
 	journal = {Information Sciences},
-	author = {Mantovani, Rafael G. and Rossi, André L. D. and Alcobaça, Edesio and Vanschoren, Joaquin and Carvalho, André C. P. L. F. de},
+	author = {Mantovani, Rafael G. and Rossi, André L. D. and Alcoba\c{c}a, Edesio and Vanschoren, Joaquin and Carvalho, André C. P. L. F. de},
 	year = {2019},
 	pages = {193--221}
 }
